# clap-cpp-example-plugins

./: .gitmodules  CMakeLists.txt  Makefile  README.md  SUPPORT.txt
include/signalsmith-clap/: cpp.h  note-manager.h  params.h
resources/example-keyboard/: keyboard.html
resources/example-note-plugin/: index.html
source/: clap-cpp-tools.h  clap-extras.h  clap_entry.cpp  example-synth.cpp  hxx-resources.py  note-manager.h  plugin-list.h  plugins.cpp  plugins.h  wrap-plugin-method.h
source/example-audio-plugin/: example-audio-plugin.cpp  example-audio-plugin.h
source/example-audio-plugin/resources/: cbor.min.js.hxx  index.html  index.html.h.h  index.html.hxx
source/example-keyboard/: example-keyboard.h
source/example-note-plugin/: example-note-plugin.cpp  example-note-plugin.h
source/example-note-plugin/resources/: cbor.min.js  cbor.min.js.hxx  index.html  index.html.hxx
source/example-plugin/: example-plugin.cpp  example-plugin.h
source/example-plugin/resources/: index.html.hxx
source/example-synth/: example-synth.cpp  example-synth.h  synth-manager.h
source/note-manager/: note-manager.h
source/synth-manager/: synth-manager.h
